Gradle Build error for console has been fixed.

--- a/console/build.gradle
+++ b/console/build.gradle
@@ -13,5 +13,5 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'notes.multi.console.Console.kt'
+    mainClass = 'notes.multi.console.ConsoleKt'
 }
