JUNIT5 has been added in dependencies in all gradle files. Implemented two unit tests for file management. Fixed bug.

--- a/console/build.gradle
+++ b/console/build.gradle
@@ -9,9 +9,14 @@ plugins {
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'notes.multi.console.ConsoleKt'
+}
+
+test {
+    useJUnitPlatform()
 }
