--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -8,4 +8,9 @@ plugins {
 
 dependencies {
     api project(':list')
+    testImplementation 'org.jetbrains.kotlin:kotlin-test'
+}
+
+test {
+    useJUnitPlatform()
 }
