--- a/console/build.gradle
+++ b/console/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 javafx {
     version = '18.0.2'
-    modules = ['javafx.controls', 'javafx.graphics']
+    modules = ['javafx.controls', 'javafx.graphics', 'javafx.web']
 }
 
 dependencies {
