--- a/console/build.gradle
+++ b/console/build.gradle
@@ -14,10 +14,18 @@ javafx {
     modules = ['javafx.controls', 'javafx.graphics']
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    implementation 'org.xerial:sqlite-jdbc:3.30.1'
+    implementation("org.jetbrains.exposed:exposed-core:$exposedVersion")
+    implementation("org.jetbrains.exposed:exposed-dao:$exposedVersion")
+    implementation("org.jetbrains.exposed:exposed-jdbc:$exposedVersion")
 }
 
 application {
