--- a/console/build.gradle
+++ b/console/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     implementation project(':utilities')
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     implementation 'org.xerial:sqlite-jdbc:3.30.1'
+
+    implementation("org.slf4j:slf4j-simple:1.6.1")
+
     implementation("org.jetbrains.exposed:exposed-core:$exposedVersion")
     implementation("org.jetbrains.exposed:exposed-dao:$exposedVersion")
     implementation("org.jetbrains.exposed:exposed-jdbc:$exposedVersion")
