--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -14,6 +14,12 @@ javafx {
     modules = ['javafx.controls', 'javafx.graphics']
 }
 
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 dependencies {
     api project(':list')
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
