--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,14 @@
 
 plugins {
     id 'notes.multi.kotlin-application-conventions'
+    id 'notes.multi.kotlin-library-conventions'
+    id 'application'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 dependencies {
+    implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.11.0'
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
@@ -15,6 +20,11 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClass = 'notes.multi.app.AppKt'
+}
+
+javafx {
+    version = '18.0.2'
+    modules = ['javafx.controls', 'javafx.graphics', 'javafx.web']
 }
 
 test {
