--- a/console/build.gradle
+++ b/console/build.gradle
@@ -9,6 +9,12 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 javafx {
     version = '18.0.2'
     modules = ['javafx.controls', 'javafx.graphics', 'javafx.web']
