--- a/console/build.gradle
+++ b/console/build.gradle
@@ -42,6 +42,6 @@ test {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
