--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,22 @@ java {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.11.0'
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
+
+    implementation 'org.xerial:sqlite-jdbc:3.30.1'
+
+    implementation("org.slf4j:slf4j-simple:1.6.1")
+
+    implementation("org.jetbrains.exposed:exposed-core:$exposedVersion")
+    implementation("org.jetbrains.exposed:exposed-dao:$exposedVersion")
+    implementation("org.jetbrains.exposed:exposed-jdbc:$exposedVersion")
 }
 
 application {
