--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation("org.jetbrains.exposed:exposed-core:0.40.1")
     implementation("org.jetbrains.exposed:exposed-dao:0.40.1")
     implementation("org.jetbrains.exposed:exposed-jdbc:0.40.1")
+    implementation ("com.beust:klaxon:5.5")
 }
 
 test {
